--- a/aaa/index.html
+++ b/aaa/index.html
@@ -11,8 +11,8 @@
 			<div class="header-left">
 				<h1>SHIPIN</h1>
 				<div class="header-left-nav">
-					<div class="header-left-nav-list header-left-nav-list-current">Home</div>
-					<div class="header-left-nav-list">Spike</div>
+					<div class="header-left-nav-list" data-page="home">Home</div>
+					<div class="header-left-nav-list" data-page="spike">Spike</div>
 					<div class="header-left-nav-list">Accessories</div>
 					<div class="header-left-nav-list">Scarf</div>
 					<div class="header-left-nav-list">Hat gloves</div>
@@ -40,7 +40,7 @@
 				</div>
 			</div>
 		</header>
-		<iframe id="index-iframe" src="view/home.html" scrolling="no" width="100%"></iframe>
+		<iframe id="index-iframe" src="" scrolling="no" width="100%"></iframe>
 	<script type="text/javascript" src="script/use/jquery.min.js" ></script>
 	<script type="text/javascript" src="script/index.js" ></script>
 	</body>
